2003-08-08 John Fleck <jfleck@inkstain.net>

	* docs/C/modemlights-C.omf
	* docs/C/modemlights.xml
	* docs/C/figures/modemlights_applet_advanced.png
	* docs/C/figures/modemlights_applet_advanced.png
	* docs/C/figures/modemlights_applet_colors.png
	* docs/C/figures/modemlights_applet_connected.png
	* docs/C/figures/modemlights_applet_general.png
	* docs/C/figures/modemlights_applet_if_connect.png
	updated docs etc. from Chee Bin HOH (rock!)
	
2003-07-29 John Fleck <jfleck@inkstain.net>

	* docs/C/figures/modemlights_applet_general.png
	* docs/C/figures/modemlights_applet_prefs_connecting.png
	* docs/C/figures/modemlights_applet_prefs_display.png
	updated screenshots from Chee Bin HOH

2003-07-26  Christian Neumair  <chris@gnome-de.org>

	* modemlights.schemas.in: Fix two typos introduced by Kevin's patch
	(#116066).

2003-07-24  Kevin Vandersloot

	* schemas.in: Clean up strings as part of bug #116066

2003-07-23 John Fleck <jfleck@inkstain.net>

	* docs/C/modemlights-C.omf
	adding omf file, which I forgot, breaking things

2003-07-23 John Fleck <jfleck@inkstain.net>

	* Makefile.am
	* docs/Makefile.am
	* docs/C/Makefile.am, modemlights.xml
	* docs/C/figures/*.png
	add new version of modemlights docs from Chee Bin HOH

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* properties.c:  HIGify widget padding between the vbox and 
	action area of the dialogs.  Thanks to <chris@gnome-de.org> 
	Christian - Manny Calavera - Neumair.
	
Tue Jul 08 18:14:21 2003  George Lebl <jirka@5z.com>

	* properties.c: may properties respect key writability

2003-06-10  Shailesh Mittal <shailesh.mittal@wipro.com>

	* modemlights.c: (modemlights_applet_fill): Modified to create
	AF_INET6 socket, if AF_INET6 is defined on the system. If AF_INET6
	socket can not be created, then we are falling back to AF_INET socket.

2003-06-06  Paolo Borelli <pborelli@katamail.com>

	* modemlights.c: gnome_question_dialog -> gtk_message_dialog conversion;