@@ -1,3 +1,8 @@
+Mon Sep 15 15:23:24 2003  George Lebl <jirka@5z.com>
+
+	* modemlights.c: when started in lockdown mode, hide the preferences
+	  item
+
 2003-08-08 John Fleck <jfleck@inkstain.net>
 
 	* docs/C/modemlights-C.omf
